# NEXUS_GAZEBO_SIM

./: .env.glm.template  .gitignore  CODE_OF_CONDUCT.md  LICENSE  MAPS.md  NOTICE.md  README.md  SCRIPTS.md  build_local.sh  install_host_deps_ubuntu22_humble.sh  open_depth_camera.sh  run_sim_local.sh  run_sim_local_camera.sh  run_sim_local_gui.sh  run_sim_local_omni.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: nav2_mppi_params.yaml  nexus_navigation_stack.yaml
docs/: ARCHITECTURE.md  MAP_SOURCES.md  README_NO_DOCKER.md  REFACTORING_REPORT.md  WORKTREE_CLEANUP_STATUS.md
docs/reports/: COMPLETE_DIAGNOSIS.md  DATA_FLOW_AND_TECHNICAL_ROUTE.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS_80_PERCENT.md  FINAL_STATUS_95_PERCENT.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  HONEST_FINAL_REPORT.md  HONEST_FINAL_TRUTH.md  INTEGRATION_TEST_REPORT.md  NEXUS_LRAE_INTEGRATION_STATUS.md  README_LRAE_INTEGRATION.md  TEST_REPORT_20260702_212019.md  TEST_REPORT_FINAL.md  TEST_REPORT_SUCCESS.md  TRUTH_SOLUTION_SUCCESS.md
launch/: lrae_exploration.py  nav2_mppi.launch.py
project_identity/: README.md
project_identity/legal/: CONTRIBUTING.md
project_identity/logo/: play_logo_intro.sh
runlocal/: ensure_fuel_models.py  start.sh  stop.sh
scripts/: build.sh  build_check.sh  build_fastlio.sh  check_deps.sh  continuous_navigator.py  monitor_lrae.sh  nav2_goal_bridge.py  open_depth_camera.sh  open_teleop.sh  run_elevation_mppi.sh  run_fastlio.sh  run_gp_fastlio.sh  run_gp_nav.sh  run_lrae.sh  run_mppi.sh  run_sim.sh  run_sim_camera.sh  run_sim_gui.sh  run_sim_omni.sh  run_street_infer.sh  start.sh  stop.sh
scripts/utils/: gpu_gl_env.sh  nexus_logo.py  normalize_cave_world.py  play_logo_intro.sh  street_infer.sh  test_map_publisher.py
src/livox_ros_driver2/: CMakeLists.txt  build.sh
src/livox_ros_driver2/config/: MID360_config.json
src/nexus_elevation_mppi/: CMakeLists.txt  README.md  package.xml
src/nexus_elevation_mppi/config/: nexus_elevation_mapping.rviz  nexus_mppi_controller.yaml
src/nexus_elevation_mppi/scripts/: elevation_map_exporter.py  novelty_explorer.py  traversability_to_map.py
src/nexus_elevation_mppi/src/: mppi_navigator.cpp
src/nexus_fastlio/: CMakeLists.txt  README.md  package.xml
src/nexus_fastlio/config/: fastlio2_sim.yaml
src/nexus_fastlio/scripts/: fastlio_imu_adapter.py  fastlio_lidar_adapter.py
src/nexus_gp_mapping/: CMakeLists.txt  README.md  package.xml
src/nexus_gp_mapping/config/: nexus_gp_navigation.rviz
src/nexus_gp_mapping/scripts/: gp_mapping_node.py
src/nexus_sand_mpc/: README.md  package.xml  setup.cfg  setup.py
src/nexus_sand_mpc/config/: sand_mpc.yaml
src/nexus_sand_mpc/launch/: sand_mpc.launch.py
src/nexus_sand_mpc/nexus_sand_mpc/: __init__.py  sand_mpc_controller.py  sand_mpc_node.py
src/nexus_teleop/: CMakeLists.txt  README.md  package.xml
src/nexus_teleop/scripts/: pose_to_tf_bridge.py  teleop_gui.py
src/ros2_livox_simulation/: CMakeLists.txt  README.md  package.xml
src/ros2_livox_simulation/config/: cube_rob_omni_ctrl.yaml  nexus_gazebo_sim.rviz
src/ros2_livox_simulation/include/ros2_livox/: csv_reader.hpp  livox_points_plugin.h
src/ros2_livox_simulation/launch/: _world_lighting.py  launch_sim.sh  sim_launch.py  sim_launch_omni.py
src/ros2_livox_simulation/models/apollo15_landing_site_1000x1000/: model.sdf
src/ros2_livox_simulation/models/mars_gazebo_topography/: model.config  model.sdf
src/ros2_livox_simulation/models/marsyard2021_terrain/: model.sdf
src/ros2_livox_simulation/models/marsyard2022_terrain/: model.config  model.sdf
src/ros2_livox_simulation/models/rm_2026/: model.config
src/ros2_livox_simulation/models/rm_2026/meshes/: rm_map.stl  rm_map_clean_try.stl
src/ros2_livox_simulation/scripts/: clound_acc.py  cmd_vel_to_swerve.py  runtime_depth_camera.py  solar_time_panel.py
src/ros2_livox_simulation/src/: fix_cloud_time.cpp  fix_imu_time.cpp  runtime_mount_follower_plugin.cpp  tf_pub.cpp
src/ros2_livox_simulation/urdf/: depth_camera_gazebo.xacro  robot_sim.xacro  robot_sim_omni.xacro
src/ros2_livox_simulation/world/: autoware.world  mars_gazebo_topography_map_only.world  marsyard2020_map_only.world  space_maps_showcase.world
tools/elevation_ros2/: build_elevation_mapping_ros2.sh  nexus_fastlio_world_cloud.yaml  nexus_world_cloud.yaml
tools/elevation_ros2/python/: tf_transformations.py
ws/src/livox_ros_driver2/launch_ROS2/: rviz_MID360_launch.py
ws/src/ros2_livox_simulation/: CMakeLists.txt  package.xml
ws/src/ros2_livox_simulation/config/: cube_rob_cotrl.yaml  nexus_gazebo_sim.rviz
ws/src/ros2_livox_simulation/launch/: _world_lighting.py  sim_launch.py  sim_launch_omni.py
ws/src/ros2_livox_simulation/models/apollo15_landing_site_1000x1000/: model.config
ws/src/ros2_livox_simulation/models/marsyard2020_terrain/: model.config  model.sdf
ws/src/ros2_livox_simulation/models/marsyard2021_terrain/: model.config
ws/src/ros2_livox_simulation/models/rm_2026/: model.sdf
ws/src/ros2_livox_simulation/scripts/: clound_acc.py  cmd_vel_to_swerve.py  controller_sim.py  fix_cloud_time.py  fix_imu_time.py  pcd_to_bev_viewer.py  pcl_fixed.py  pub_map.sh  spawn_omni_controllers.py  trans_f.py
ws/src/ros2_livox_simulation/src/: fix_cloud_time.cpp  livox_points_plugin.cpp  solar_lighting_world_plugin.cpp  tf_pub.cpp
ws/src/ros2_livox_simulation/urdf/: mid360.xacro  robot_sim.xacro  robot_sim_omni.xacro
ws/src/ros2_livox_simulation/world/: apollo15_map_only.world  marsyard2021_map_only.world  marsyard2022_map_only.world  rm_2026_slam_world.world
