<?xml version="1.0"?>
<package format="3">
  <name>nexus_sand_mpc</name>
  <version>0.1.0</version>
  <description>ROS 2 migration of the sand-slip MPC command compensator.</description>
  <maintainer email="charles@nexus.org">Charles</maintainer>
  <license>All Rights Reserved</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
